@@ -16,6 +16,7 @@
 #include <gtk/gtk.h>
 #include <libgnome/gnome-preferences.h>
 
+#include <bonobo/bonobo-i18n.h>
 #include <bonobo/bonobo-ui-xml.h>
 #include <bonobo/bonobo-ui-util.h>
 #include <bonobo/bonobo-ui-engine.h>
@@ -265,13 +266,13 @@ cmd_get_menu_pixmap (BonoboUINode     *node,
 	char      *type;
 
 	if ((type = bonobo_ui_node_get_attr (node, "pixtype"))) {
-		pixmap = bonobo_ui_util_xml_get_icon_pixmap_widget (node, TRUE);
+		pixmap = bonobo_ui_util_xml_get_icon_pixmap_widget (node, GTK_ICON_SIZE_MENU);
 		bonobo_ui_node_free_string (type);
 		return pixmap;
 	}
 
 	if ((type = bonobo_ui_node_get_attr (cmd_node, "pixtype"))) {
-		pixmap = bonobo_ui_util_xml_get_icon_pixmap_widget (cmd_node, TRUE);
+		pixmap = bonobo_ui_util_xml_get_icon_pixmap_widget (cmd_node, GTK_ICON_SIZE_MENU);
 		bonobo_ui_node_free_string (type);
 		return pixmap;
 	}
@@ -561,7 +562,7 @@ impl_bonobo_ui_sync_menu_build (BonoboUISync     *sync,
 	BonoboUISyncMenu *menu_sync = BONOBO_UI_SYNC_MENU (sync);
 	GtkWidget      *menu_widget = NULL;
 	GtkWidget      *ret_widget;
-	char           *type;
+	char           *type, *stock_id;
 
 	if (!parent) /* A popup without a GtkMenu inserted as yet. */
 		return NULL;
@@ -588,6 +589,35 @@ impl_bonobo_ui_sync_menu_build (BonoboUISync     *sync,
 
 	} else if (bonobo_ui_node_has_name (node, "menuitem") ||
 		   bonobo_ui_node_has_name (node, "submenu")) {
+
+		if ((stock_id = bonobo_ui_engine_get_attr (node, cmd_node, "stockid"))) {
+			GtkStockItem  stock_item;
+			GtkIconSet   *icon_set;
+
+			if (!gtk_stock_lookup (stock_id, &stock_item))
+				g_warning ("Unknown stock id '%s' on %s", stock_id,
+					   bonobo_ui_xml_make_path (node));
+			else {
+				gchar *label, *accel;
+
+				label = bonobo_ui_util_encode_str (
+					dgettext (stock_item.translation_domain, stock_item.label));
+				accel = bonobo_ui_util_accel_name (stock_item.keyval, stock_item.modifier);
+
+				bonobo_ui_node_set_attr (node, "label", label);
+				bonobo_ui_node_set_attr (node, "accel", accel);
+
+				g_free (label);
+				g_free (accel);
+			}
+
+			icon_set = gtk_icon_factory_lookup_default (stock_id);
+
+			if (icon_set) {
+				bonobo_ui_node_set_attr (node, "pixtype", "stock");
+				bonobo_ui_node_set_attr (node, "pixname", stock_id);
+			}
+		}
 
 		/* Create menu item */
 		if ((type = bonobo_ui_engine_get_attr (node, cmd_node, "type"))) {
